third_party/rust/serde_repr/tests/ui/missing_repr.stderr
error: missing #[repr(...)] attribute
 --> $DIR/missing_repr.rs:3:10
  |
3 | #[derive(Serialize_repr)]
  |          ^^^^^^^^^^^^^^

error: aborting due to previous error

